log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Thu May 14 05:57:04 PM UTC 2026: 
 graph.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
d668795
Thu May 14 06:00:48 PM UTC 2026: 
 graph.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
bd5b079
Thu May 14 06:04:03 PM UTC 2026: 
 graph.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
aaec9ee
Thu May 14 06:09:55 PM UTC 2026: 
 graph.c | 14 ++++----------
 1 file changed, 4 insertions(+), 10 deletions(-)
 tests:  8|2
========================================
eda23f7
Thu May 14 06:13:00 PM UTC 2026: 
 graph.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  8|2
========================================
593c8cf
Thu May 14 06:15:51 PM UTC 2026: 
 graph.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:80:11: error: ‘edgeACtual’ undeclared (first use in this function); did you mean ‘edgeActual’?
   80 |     while(edgeACtual) {
      |           ^~~~~~~~~~
      |           edgeActual
graph.c:80:11: note: each undeclared identifier is reported only once for each function it appears in
5f54b33
Thu May 14 06:16:02 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
========================================
a657ece
Thu May 14 08:02:22 PM UTC 2026: 
 tests:  12|0
========================================
66ff408
Thu May 14 08:02:45 PM UTC 2026: 
 tests:  12|0
========================================
2d492a4
Thu May 14 08:17:06 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
========================================
a9d52c9
Thu May 14 08:17:59 PM UTC 2026: 
 tests:  12|0
========================================
223cb3c
Thu May 14 08:18:09 PM UTC 2026: 
 tests:  12|0
========================================
c1dce4a
Thu May 14 08:29:55 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7f18ad0
Thu May 14 08:30:04 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
========================================
a3d9ece
Sat May 16 08:06:12 PM UTC 2026: 
 tests:  12|0
========================================
c2eefb6
Sat May 16 08:06:31 PM UTC 2026: 
 tests:  12|0
========================================
7230a2f
Sat May 16 08:08:57 PM UTC 2026: 
 graph.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  12|0
========================================
4f7eb2f
Sat May 16 08:09:15 PM UTC 2026: 
 tests:  12|0
========================================
d1f5d49
Sat May 16 08:09:47 PM UTC 2026: 
 tests:  12|0
========================================
35d46a7
Sat May 16 08:10:07 PM UTC 2026: 
 tests:  12|0
========================================
368576b
Sat May 16 08:10:49 PM UTC 2026: 
 tests:  12|0
========================================
6bca63e
Sat May 16 08:11:22 PM UTC 2026: 
 tests:  12|0
========================================
3768660
Sat May 16 08:12:51 PM UTC 2026: 
 tests:  12|0
========================================
46e9bb0
Sat May 16 08:14:22 PM UTC 2026: 
 tests:  12|0
========================================
a57669e
Sat May 16 08:17:06 PM UTC 2026: 
 tests:  12|0
========================================
cd69bb6
